testfx/errors/error_tests/err_05_obj_missing_colon.fx
// 测试5: 对象字面量错误 - 缺少冒号
data := { name "Alice" }
